--- a/src/SearchBar.module.css
+++ b/src/SearchBar.module.css
@@ -113,17 +113,19 @@
 }
 
 /* Styles for instruction container */
+/* Update Pie Chart container styling */
 .instructionContainer {
     margin-top: 20px;
-    /* Add some spacing above */
     padding: 15px;
     background-color: #e9f5e3;
-    /* Background color to differentiate */
     border-radius: 10px;
-    /* Rounded corners for the container */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    /* Shadow for depth */
-}
+    width: 100%;
+    max-width: 800px;  /* Control the max width for large screens */
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
 
 /* Anchor link styles */
 
